# Pseudo-localization-Demo

./: .gitignore  1.install requirement.bat  2.build into binary.bat  PLAN.md  README.md  pslo.py  pslo.pyw  pslo_2.pyw  pslo_icon_mac.icns  pslo_mini.py  pslo_mini.pyw  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: Bug-Report.yml  Feature-Request.yml
.github/workflows/: build.yml  build_x86.yml
icon/: pslo_icon_mini_mac.icns
lib/: __init__.py  basic_info.py  config_li.py  controls.py  log.py  platform_check.py  pslo_work.py  update.py
old_pslo/: pslo.pyw
